--- a/index.html
+++ b/index.html
@@ -81,24 +81,30 @@
 <h1>Popular Categories</h1>
 <div class="images">
     <div data-aos="fade-right" class="img1">
-        <div class="img">
-            <img src="home page/1x/coding.png" alt="" width="100%">
-          </div>
-          <div class="img">
-            <img src="home page/1x/business.png" alt="" width="100%">
-        </div>
+        <a href="Courses page/Courses.html#prog-dev">
+            <div class="img">
+                <img src="home page/1x/coding.png" alt="" width="100%">
+            </div>
+        </a>
+        <a href="Courses page/Courses.html#business">
+            <div class="img">
+                <img src="home page/1x/business.png" alt="" width="100%">
+            </div>
+        </a>
     </div>
     <div data-aos="fade-left" class="img1">
 
-        <div class="img">
-            <a href="login signup page/login.html">
-            <img src="home page/1x/design.png" alt="" width="100%">
+        <a href="Courses page/Courses.html#Designing">
+            <div class="img">
+                    <img src="home page/1x/design.png" alt="" width="100%">
+            </div>
         </a>
-          </div>
       
-          <div class="img">
-              <img src="home page/1x/marketing.png" alt="" width="100%">
-          </div>
+        <a href="Courses page/Courses.html#Digital-Marketing">
+            <div class="img">
+                <img src="home page/1x/marketing.png" alt="" width="100%">
+            </div>
+        </a>
     </div>
 
 </div>
@@ -201,8 +207,8 @@
   <div data-aos="fade-left" class="cards">
     <img class="pre-btn" src="home page/caret-right.svg" alt="">
     <img class="nxt-btn" src="home page/caret-right.svg" alt="">
-    <a href="course description page/cd.html"></a>
       <div class="videos">
+          <a href="course description page/cd.html">
         <div class="card-cont">
             <div class="image">
                 <img src="Courses page/courses images/xd course.jpg" width="100%" alt="">
@@ -217,6 +223,8 @@
                 </div>
             </div>
         </div>
+    </a>
+    <a href="course description page/cd.html">
         <div class="card-cont">
             <div class="image">
                 <img src="Courses page/courses images/youtube ads course.jpg" width="100%" alt="">
@@ -231,6 +239,8 @@
                 </div>
             </div>
         </div>
+    </a>
+        <a href="course description page/cd.html">
         <div class="card-cont">
             <div class="image">
                 <img src="Courses page/courses images/Fiverr Seo course.jpg" width="100%" alt="">
@@ -245,6 +255,8 @@
                 </div>
             </div>
         </div>
+    </a>
+        <a href="course description page/cd.html">
         <div class="card-cont">
             <div class="image">
                 <img src="Courses page/courses images/pinterest seo course.jpg" width="100%" alt="">
@@ -259,6 +271,8 @@
                 </div>
             </div>
         </div>
+    </a>
+        <a href="course description page/cd.html">
         <div class="card-cont">
             <div class="image">
                 <img src="Courses page/courses images/android development course.jpg" width="100%" alt="">
@@ -273,6 +287,8 @@
                 </div>
             </div>
         </div>
+    </a>
+        <a href="course description page/cd.html">
         <div class="card-cont">
             <div class="image">
                 <img src="Courses page/courses images/audition course.jpg" width="100%" alt="">
@@ -287,6 +303,8 @@
                 </div>
             </div>
         </div>
+    </a>
+        <a href="course description page/cd.html">
         <div class="card-cont">
             <div class="image">
                 <img src="Courses page/courses images/game development course.jpg" width="100%" alt="">
@@ -301,6 +319,7 @@
                 </div>
             </div>
         </div>
+    </a>
       </div>
   </div>
   <a href="Courses page/courses.html" style="display: flex; justify-content: center; width: 100%;">
