--- a/course description page/cd.html
+++ b/course description page/cd.html
@@ -20,7 +20,7 @@
 </head>
 <body>
     <div class="navbar navbar-expand-md header">
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler collapsed" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="fas fa-bars" style="color: #efefef;"></span>
           </button>
           <div class="collapse navbar-collapse justify-content-center" id="navbarNavDropdown">              
@@ -146,33 +146,33 @@ give the youth, a exposure about Technology from the very Basic.
     </div>
 </div>
 
-<div class="mliked w-50 px-3 py-5 mx-5 my-5 shadow " data-aos="fade-right" style="clear: both;">
+<div class="mliked w-50 px-3 py-5 mx-5 my-5 shadow " style="clear: both;">
     <h3 class="text-center">Expectations Met?</h3>
     <div class="op">
         <p>Exceeded!</p>
         <div class="progress mx-3">
-            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped bg-warning" data-aos="fade-right" data-aos-delay="700" data-aos-duration="1500" role="progressbar" style="width: 60%" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         <p class="text-end">60%</p>
     </div>
     <div class="op">
         <p>Yes</p>
         <div class="progress mx-3">
-            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped bg-warning" data-aos="fade-right" data-aos-delay="700" data-aos-duration="1500" role="progressbar" style="width: 20%" aria-valuenow="20" aria-valuemin="0" aria-valuemax="100"></div>
           </div>
         <p class="text-end">20%</p>
     </div>
     <div class="op">
         <p class="w-25">Somewhat</p>
         <div class="progress mx-3">
-            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 13%" aria-valuenow="13" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped bg-warning" data-aos="fade-right" data-aos-delay="700" data-aos-duration="1500" role="progressbar" style="width: 13%" aria-valuenow="13" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <p class="text-end">13%</p>
     </div>
     <div class="op">
         <p class="w-25">Not Really</p>
         <div class="progress mx-3">
-            <div class="progress-bar progress-bar-striped bg-warning" role="progressbar" style="width: 7%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100"></div>
+            <div class="progress-bar progress-bar-striped bg-warning" data-aos="fade-right" data-aos-delay="700" data-aos-duration="1500" role="progressbar" style="width: 7%" aria-valuenow="7" aria-valuemin="0" aria-valuemax="100"></div>
         </div>
         <p class="text-end">7%</p>
     </div>
@@ -182,7 +182,7 @@ give the youth, a exposure about Technology from the very Basic.
     <div class="foot-list">
         <a href="../About us/aboutus.html">About</a>
         <a href="../Instructor page/instructor.html">Instructors</a>
-        <a href="../Privacy policy page/privacypolicy.html">Privacy Policy</a>
+        <a href="../Privacy policy page/index.html">Privacy Policy</a>
         <a href="../Instructor page/instructor.html">Channel Links</a>
     </div>
     <hr data-aos="fade-right">
@@ -199,14 +199,14 @@ give the youth, a exposure about Technology from the very Basic.
     </div>
 </div>
 <script>
+    
     $('.navbar-toggler').click(function(){
         if($('.navbar-toggler').hasClass("collapsed")){
             $('.nav-item').removeClass("py-2");
-            $(".nav-item").removeClass('new');
         }
         else{
+            $(".navbar").css("background-color","#da2c38");
             $('.nav-item').addClass("py-2");
-            $(".nav-item").addClass('new');
             
         }
     });
